tests/atest/rules/errors/invalid_section_in_resource/task.resource
*** Keywords ***
Keyword
    No Operation


*** Tasks ***
Task
    Keyword
